--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: darkgrey;
+    background-color: bisque;
     height: 100vh;
     display: flex;
     justify-content: center;
